# EXP

./: .gitattributes  .gitignore  .gitmodules  AUTHORS  CITATION.cff  CITATIONS.bib  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  Dockerfile  Exception.H  INSTALL  INSTALL.md  Makefile.am  NEWS  README  README.build  README.md  autogen.sh  config_cmake.h.in  config_cmake.h_in  configure.ac  cudalt.py  environment.yaml  pyproject.toml
ExpMPI/: AUTHORS  CBacp.c  ChangeLog  Cylacp2.cc  Cylacp3.cc  EmpOrth4.cc  EmpOrth5.cc  EmpOrth6.cc  EmpOrth6.h  EmpOrth7.cc  EmpOrth7.h  EmpOrth7thd.cc  EmpOrth7thd.h  HERNQacp.c  INSTALL  Interp.h  Makefile  Makefile.am  NEWS  Orient.cc  Orient.h  README  SLGridMP.cc  SLGridMP.h  SLGridMP2.cc  SLGridMP2.h  SatelliteOrbit.cc  SatelliteOrbit.h  Sphacp.cc  SphericalSL.cc  SphericalSL.h  WghtOrth.cc  WghtOrth.h  WghtOrth2.cc  WghtOrth2.h  WghtOrth3.cc  WghtOrth3.h  accpot.c  adjscl.c  analcld.c  (+65 more)
ExpMPI/doc/: Makefile.am  bodies.doc  check.doc  config.doc  exp.cfg  exp.css  faq.doc  footer.html  header.html  ics.doc  mainpage.doc  modules.doc  multistep.doc  quick.doc  utilities.doc  verbose.doc
ExpMPI/examples/: IN.FILE  disk.conf  halo.conf
ExpMPI/expgnu/: ACG.cc  ACG.h  Binomial.h  LogNorm.h  MLCG.cc  MLCG.h  Makefile.am  Normal.cc  Normal.h  Poisson.cc  Poisson.h  RNG.cc  RNG.h  Random.cc  Random.h  Regex.cc  RndInt.h  SmplHist.cc  SmplHist.h  SmplStat.cc  SmplStat.h  String.cc  String.h  Uniform.cc  Uniform.h  Weibull.cc  Weibull.h  builtin.h  error.cc  std.h  timer.c
ExpMPI/exputil/: BarrierWrapper.cc  CVector.cc  CauchyPV.cc  ChebFit.cc  Cheby1d.cc  Complex.cc  FindOrb.cc  GaussCore.c  GaussCore.h  Hermite.c  Hermite.h  Makefile.am  ParamDatabase.cc  ParamParse.cc  ParamParseMPI.cc  ProgramParam.cc  QPDistF.cc  SLGridMP2.cc  Splint.cc  SplintE.cc  Trapsum.cc  Vector.cc  Vector3.cc  Vlocate.cc  Vodd2.cc  biorth.cc  biorth2d.cc  biorth2d2.cc  biorthSL.cc  biorth_grid.cc  biorth_wake.cc  biorth_wake_orientation.cc  brent.cc  clinalg.cc  cpoly.cc  cubic.cc  dgammln.cc  eigen.cc  eigtest.cc  elemfunc.cc  (+46 more)
ExpMPI/include/: BarrierWrapper.H  CVector.h  CauchyPV.h  ChebFit.h  DiskWithHalo.h  FindOrb.H  Func1d.H  OrthoPoly.h  ParamParse.H  ParamParseMPI.H  ProgramParam.H  QPDistF.h  RunningTime.H  SLGridMP2.h  Spline.h  Timer.h  Vector.h  ZBrent.H  biorth.h  biorth1d.h  biorth2d.h  biorthSL.h  biorth_wake.h  biorth_wake.h.old  clinalg.h  complex.h  cpoly.h  cubic.h  cvector.h  dead.letter  exponential.h  f2c.h  fft.h  fpetrap.h  gaussQ.h  hernquist.h  interp.h  isothermal.h  kevin_complex.h  localmpi.h  (+21 more)
ExpMPI/libsrnd/: Makefile  Makefile.am  SmplHist.cc  tmp.tmp
ExpMPI/m4/: ax_boost_mpi.m4  ax_boost_system.m4
ExpMPI/mdwlib/: Makefile.am  brent.c  cel.c  cutil.c  cutil.h  cutilc++.c  dgammln.c  dgammp.c  dgammq.c  dgcf.c  dgser.c  dplgndr.c  el2.c  exponi.c  f1dim.c  fpeieee.c  frprmn.c  gasdev.c  gauss.c  (+24 more)
ICs/: Makefile  Makefile.am  Makefile.in  autogen.sh  config.cache  config.status  configure  configure.in
coefs/: BasisClient.H  BasisClient.cc  BasisFactory.H  BasisFactory.cc  BasisWrappers.cc  BiorthBasis.H  BiorthBasis.cc  CMakeLists.txt  Centering.H  Centering.cc  CoefContainer.H  CoefContainer.cc  CoefDB.H  CoefDB.cc  CoefFactory.H  CoefFactory.cc  CoefStruct.H  CoefStruct.cc  CoefWrappers.cc  Coefficients.H  Coefficients.cc  CoefsE.H  CoefsE.cc  CoefsToH5.H  CoefsToH5.cc  EXPcoefsConfig.cmake.in  FieldBasis.H  FieldBasis.cc  FieldGenerator.H  FieldGenerator.cc  FieldWrappers.cc  H5Coefs.H  H5Coefs.cc  KMeans.H  KMeans.cc  Koopman.H  Koopman.cc  MSSAWrappers.cc  OrthoBasisFactory.H  OrthoBasisFactory.cc  (+17 more)
doc/: Makefile.am  adaptive.doc  atomicdsmc.doc  bodies.doc  config.doc  cuda.doc  dsmc.doc  exp.cfg  exp.cfg.breathe  faq.doc  global.doc  header_old.html  ion.doc  mainpage.doc  modules.doc  multistep.doc  news.doc  overview.doc  quick.doc  utilities.doc
expui/: #BasisFactory.cc#  #SvdSignChoice.cc#  BasisFactory.H  BasisFactory.cc  BiorthBasis.H  BiorthBasis.cc  BiorthBess.H  BiorthBess.cc  CMakeLists.txt  Centering.H  Centering.cc  CoefContainer.H  CoefContainer.cc  CoefStruct.H  CoefStruct.cc  Coefficients.H  Coefficients.cc  Covariance.cc  EXPuiConfig.cmake.in  FieldBasis.H  FieldBasis.cc  FieldGenerator.H  FieldGenerator.cc  FieldGenerator.cc.test  KDcenter.cc  KDdensity.H  KDdensity.cc  KMeans.cc  Koopman.H  Koopman.cc  KoopmanRKHS.H  KoopmanRKHS.cc  LiouvilleRKHS.H  LiouvilleRKHS.cc  OrthoBasisFactory.H  ParticleIterator.H  ParticleIterator.cc  README  SGSmooth.H  SGSmooth.cc  (+20 more)
exputil/: BarrierWrapper.cc  BiorthCube.cc  BiorthCyl.cc  CMakeLists.txt  CVector.cc  CauchyPV.cc  ChebFit.cc  Cheby1d.cc  Coefs.cc  DiskDensityFunc.cc  EXPmath.cc  EXPutilConfig.cmake.in  EmpCyl2D.cc  EmpCyl2d.cc  EmpCylSL.cc  ExpDeproj.cc  FileUtils.cc  FindOrb.cc  GaussCore.c  GaussCore.h  GenPoly.cc  Hankel.cc  Hermite.c  Hermite.h  Interp1d.cc  Jacobi.c  Jacobi.h  Laguerre.c  Laguerre.h  Makefile.am  MonotCubicInterpolator.cc  OrthoFunction.cc  OrthoPoly.cc  ParamDatabase.cc  ParamParse.cc  ParamParseMPI.cc  Particle.cc  ParticleReader.cc  ProgramParam.cc  QDHT.cc  (+123 more)
pyEXP/: BasisFactory.cc  BasisWrappers.cc  CMakeLists.txt  CoefFactory.H  CoefFactory.cc  CoefStruct.cc  CoefWrappers.cc  EDMDWrappers.cc  FieldGenerator.H  FieldGenerator.cc  FieldWrappers.cc  MSSAWrappers.cc  ParticleReaderWrappers.cc  PyWrappers.cc  README  TODO  TensorToArray.H  UtilWrappers.cc  __init__.py  expMSSA.H  expMSSA.cc  h5compare.cc  h5power.cc  makecoefs.cc  sample.py  sample_better_example.py  sample_part1.py  sample_part2.py
src/: AxisymmetricBasis.H  AxisymmetricBasis.cc  BN.H  Basis.H  Basis.cc  Bessel.H  Bessel.cc  Bounds.cuH  CBDisk.H  CBDisk.cc  CBrock.H  CBrock.cc  CBrockDisk.H  CBrockDisk.cc  CMakeLists.txt  CenterFile.cc  Component.H  Component.cc  ComponentContainer.H  ComponentContainer.cc  Cube.H  Cube.cc  CylEXP.H  CylEXP.cc  Cylinder.H  Cylinder.cc  Cylinder2d.H  Cylinder2d.cc  CylindricalCoefs.H  CylindricalCoefs.cc  Direct.H  Direct.cc  EJcom.H  EJcom.cc  EXPException.H  EXPException.cc  EXPnbodyConfig.cmake.in  EmpCylSL.H  EmpCylSL.cc  EmpCylSL.h  (+163 more)
(+1413 files in other folders)
